# bert.cheater

./: .gitignore  .goreleaser.yaml  HISTORY.md  README.md  cheater  cheater.py  config.ini  config.yaml  go.mod  go.sum  main.go  requirements.txt  setup.cfg
.github/workflows/: gorelease.yaml
bertdotcheater/: cli.py
commands/find/: find.go
config/: config.go
examples/example1/: README.md  config.yaml  notes.md
utils/: fso.go
