[metadata]
name = bertdotcheater
author = Engelbert Tejeda
author_email = berttejeda@gmail.com
description = Bert's Cheat Notes cli
version = file: VERSION.txt
url = https://github.com/berttejeda/bert.cheater
keywords =
  md 
  markdown
  cheatsheet
  notes
  snippets
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.4
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
long_description = file: README.md
long_description_content_type = text/markdown
license_files =
  LICENSE.txt

[options]
include_package_data = true
python_requires = >= 3.7
setup_requires =
  setuptools >= 40.6
  pip >= 10
  wheel >= 0.31
packages = find:
zip_safe: False
scripts =
#  somescript.py
install_requires =
  click>=6.7
  PyYAML>=3.12
  markdown
  setuptools

[options.extras_require]
tests =
  pytest
  pytest-cov
  coveralls
  flake8
  mypy

[options.entry_points]
console_scripts =
  cheater=bertdotcheater.cli:cli

[options.data_files]